# decentralized-voting-system

./: Cargo.toml  README.md  canister_ids.json  deploy.sh  dfx.json  package-lock.json  package.json
src/declarations/votingsystem_backend/: index.d.ts  index.js  votingsystem_backend.did  votingsystem_backend.did.d.ts  votingsystem_backend.did.js
src/declarations/votingsystem_frontend/: index.d.ts  index.js
src/votingsystem_backend/: Cargo.toml
src/votingsystem_backend/src/: lib.rs
src/votingsystem_frontend/: package.json
src/votingsystem_frontend/src/: App.jsx  index.scss  main.jsx
