[package]
name = "votingsystem_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.17"
ic-cdk-timers = "0.11" # Feel free to remove this dependency if you don't need timers
ic-cdk-macros = "0.13.2"
sha2 = "0.9.8"
serde = { version = "1.0.160", features = ["derive"] }
candid-extractor = "0.1.2"
serde_bytes = "0.11.14"
ic-stable-structures = "0.6.2"

